# pluma_formatter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Token.h  main.cpp
data/: hash_c.txt  lr1_table_cache.txt
example/: ast_tree.txt  out.txt  out2.txt  test.txt  test2.txt
include/: Ast.hpp  Formatter.h  Grammar.hpp  Lexer.h  Logger.h  Parser.h  Symbol.hpp  Token.h  main.h
include/c/: CParser.h
include/utils/: Hash.h
src/: CMakeLists.txt  Formatter.cpp  Grammar.cpp  Lexer.cpp  Parser.cpp  Symbol.cpp  Token.cpp  main.cpp
src/c/: CParser.cpp
src/utils/: Hash.cpp
